# QuFit-rs

./: Cargo.toml  README.md
math_files/: Lorenzian_derivative.typst  Sine_derivative.typst  T1_derivative.typst
src/: fft.rs  fit_esr.rs  fit_esr_nalgebra.rs  fit_rabi_nalgebra.rs  fit_t1_nalgebra.rs  lib.rs  load.rs  main.rs  medfilt.rs
