[package]
name = "qufit-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "qufit"
crate-type = ["cdylib"]

[dependencies]
argmin = "0.8.1"
argmin-math = {version="0.3.0", features=["ndarray_latest-serde"]}
argmm = "0.1.2"
levenberg-marquardt = "0.13.1"
nalgebra = "0.32.3"
ndarray = {version = "0.15.6", features=["serde"]}
ndarray-linalg = {version="0.16.0", features=["openblas"]}
ndarray-npy = "0.8.1"
numpy = "0.19.0"
pyo3 = {version="0.19.2", features=['extension-module']}
rayon = "1.8.0"
serde = {version = "1.0.188", features=["derive"]}
